[ALF-1426] Поля печатных документов незаполнены [ALF-1400] В сформированном печатном листе согласования вместо значений проставлены - null. [ALF-1392] В сформированном файле ячейка "Результат согласования" заполнено значением "REASSIGNED" Поправлены отчёты "старого" формата под обновлённый мехнизм параметризации
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3857 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/contract-dossier-byid/contract-dossier-byid.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/contract-dossier-byid/contract-dossier-byid.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="contract-dossier" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="515" leftMargin="50" rightMargin="30" topMargin="20" bottomMargin="20" uuid="fde173e5-f2de-4a7a-9bfb-a94e9b0aa173">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="contract-dossier-byid" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="515" leftMargin="50" rightMargin="30" topMargin="20" bottomMargin="20" uuid="fde173e5-f2de-4a7a-9bfb-a94e9b0aa173">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
