--- a/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/approval-list/approval-list.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/approval-list/approval-list.jrxml
@@ -31,6 +31,9 @@
 	<queryString>
 		<![CDATA[select * from cm:documents]]>
 	</queryString>
+	<field name="ID" class="java.lang.String">
+		<fieldDescription><![CDATA[ID документа]]></fieldDescription>
+	</field>
 	<field name="col_Doc.ProjectNum" class="java.lang.String">
 		<fieldDescription><![CDATA[Номер проекта договора]]></fieldDescription>
 	</field>
@@ -124,7 +127,10 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans Mono" size="12" isBold="true" pdfEncoding="Cp1251"/>
 				</textElement>
-				<textFieldExpression><![CDATA["К договору проект № "+ $F{col_Doc.ProjectNum} + ", версия № "+ $F{col_AproveList.Version}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["К договору проект № "
++ ($F{col_Doc.ProjectNum} != null ? $F{col_Doc.ProjectNum} : "")
++ ", версия № "
++ ($F{col_AproveList.Version} != null ? $F{col_AproveList.Version} : "")]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement uuid="92c94d2f-ae2f-45d6-826a-4fe022f0baa4" positionType="FixRelativeToBottom" x="2" y="30" width="357" height="32"/>
@@ -140,7 +146,7 @@
 				</textElement>
 				<textFieldExpression><![CDATA["Дата начала согласования:"]]></textFieldExpression>
 			</textField>
-			<textField pattern="dd/MM/yyyy" isBlankWhenNull="false">
+			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
 				<reportElement uuid="0debf964-2b3a-47e5-9325-01ab4f577fd2" positionType="FixRelativeToBottom" x="548" y="30" width="180" height="32"/>
 				<textElement textAlignment="Left" verticalAlignment="Top">
 					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251"/>
@@ -281,7 +287,8 @@
 					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251"/>
 					<paragraph spacingBefore="5" spacingAfter="5"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Результат: "+$F{col_AproveList.ApproveResult}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Результат: "
++ (($F{col_AproveList.ApproveResult} != null) ? $F{col_AproveList.ApproveResult} : "")]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement uuid="e219c235-6444-4008-97a2-6fc0d01e1bbd" x="384" y="20" width="232" height="20" isPrintInFirstWholeBand="true"/>
