ALF-1471 дополнения к ошибочно закрытому http://devservice.it.ru/dev/browse/ALF-1419 [+] добавлена локализация даты в javaScript 1) имя пользователя жирным шрифтом - как в эскизе 2) имя и дату всегда начинать с новой строки - как в эскизе 3) представление даты сделано как в эскизе "17 авг 2013"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3862 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-dashlet.css
+++ b/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-dashlet.css
@@ -66,6 +66,10 @@
     border-bottom: 1px dashed #D9D9D9;
 }
 
+.body.scrollableList .my-errands td .info a{
+    font-weight:bolder;
+}
+
 .body.scrollableList .my-errands {
     width: 100%;
 }
