ALF-1263. 9.5 Задачи подразделения. Диаграмма Ганта [+]Добавлена выделение поручений находящихся на контроле
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3867 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-diagram.css
+++ b/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-diagram.css
@@ -6,6 +6,10 @@
     background-color: blue;
 }
 
+.yui-dt-liner.orangeline {
+    background-color: orange;
+}
+
 .errands.pagination.yui-pg-container {
     text-align: center;
 }
