ALF-1263. 9.5 Задачи подразделения. Диаграмма Ганта [~] подправил цвет выделения. Просроченные поручения подчеркиваются "Оранжевым" цветом, аналогично цвету выделения в дашлете "Мои поручения". "Важные" поручения выделяются красным цветом, если поручение не помечено как "Важное" проверяется есть ли контролер у поручения, если есть подчеркиваем "Зеленым" цветом. Остальные поручения не являющиеся Просроченными, Важными, На контроле подчеркиваются синим цветом. Просроченны: Оранжевый Важные: Красным На контроле: Зеленым Остальные: синим цветом
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3872 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-diagram.css
+++ b/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-diagram.css
@@ -10,6 +10,10 @@
     background-color: orange;
 }
 
+.yui-dt-liner.greenline {
+    background-color: #32cd32;
+}
+
 .errands.pagination.yui-pg-container {
     text-align: center;
 }
