Отчёты [ALF-1402] В сформированном листе согласования, вместо должности указывается - null + отчёт "Лист согласования" убран из карточки документа + отчёт поручений "Продуктивность по подразделениям"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3898 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/approval-list/approval-list.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/approval-list/approval-list.jrxml
@@ -173,7 +173,7 @@
 					<font fontName="DejaVu Sans Mono" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Согласующий"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Сотрудник"]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement uuid="8514e4c9-574d-4cbd-87f1-2afb80a884a2" x="210" y="2" width="170" height="26"/>
