Баги в IE : ALF-1467 - Элементы на форме создания поручения отображаются некорректно; ALF-1398 - На форме выбора сотрудника при добавлении согласующего поле поиска смещено
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3923 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/page-document.css
+++ b/lecm-documents/share/src/main/webapp/css/page-document.css
@@ -144,11 +144,11 @@
 
 /* Forms */
 
-.form-container .form-fields {
+div.form-container .form-fields {
     border-bottom: medium none;
     padding: 0 1em;
 }
-.yui-panel.form-container .form-fields {
+div.yui-panel.form-container .form-fields {
     padding-top: 1em;
 }
 
