--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/dnd-uploader-control.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/dnd-uploader-control.css
@@ -35,6 +35,7 @@
 }
 .dnd-uploader div.uploader-block fieldset legend {
     color: #666;
+    background: #fff;
 }
 .dnd-uploader .uploader-block.dndDocListHighlight fieldset {
     border: 2px solid #4F94C9;
