Refactoring; ALF-1498 : Невозможно удалить исполнителя из атрибута "Исполнитель" на форме "Выполнение действия "Создать дочернее поручение"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3948 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/contractors.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/contractors.css
@@ -1,29 +1,29 @@
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit {
     border: 1px solid #777;
 }
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit .hd,
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit .bd div.form-buttons {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit .hd,
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit .bd div.form-buttons {
     height: 40px;
     background: #bae6f4;
     border: none;
     margin: 0;
     line-height: 40px;
 }
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit .hd {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit .hd {
     font-size: 16px;
     font-weight: bold;
     color: #076a8d;
 }
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit .bd div.form-buttons {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit .bd div.form-buttons {
     padding-right: 0;
 }
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit .bd div.form-buttons span.yui-button {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit .bd div.form-buttons span.yui-button {
     margin-top: 6px;
 }
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit .bd div.form-buttons span.yui-button:last-of-type {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit .bd div.form-buttons span.yui-button:last-of-type {
     margin-right: 10px;
 }
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit a.container-close {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit a.container-close {
     width: 16px;
     height: 16px;
     top: 10px;
@@ -32,38 +32,38 @@
     background: url("/share/res/images/lecm-base/components/window_close_16.png") no-repeat;
     opacity: .5;
 }
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit a.container-close:hover {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit a.container-close:hover {
     opacity: .8;
 }
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit a.container-close:active {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit a.container-close:active {
     opacity: 1;
 }
 
 
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit .yui-navset .yui-nav li {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit .yui-navset .yui-nav li {
     margin: 0 5px 0 0;
 }
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit .yui-navset .yui-nav li a {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit .yui-navset .yui-nav li a {
     background: #eaeaea;
     border: 1px solid #d2d2d2;
     border-bottom-width: 0;
     border-radius: 5px 5px 0 0;
 }
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit .yui-navset .yui-nav li a em {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit .yui-navset .yui-nav li a em {
     padding: 7px 15px 6px;
     border: none;
     font-size: 13px;
     font-weight: bold;
     color: #303030;
 }
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit .yui-navset .yui-nav li.selected {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit .yui-navset .yui-nav li.selected {
     margin-bottom: -1px;
     position: relative;
 }
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit .yui-navset .yui-nav li.selected a {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit .yui-navset .yui-nav li.selected a {
     background: #fff;
 }
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit .yui-navset .yui-nav li:first-of-type.selected a:after {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit .yui-navset .yui-nav li:first-of-type.selected a:after {
     content: "";
     width: 5px;
     height: 5px;
@@ -72,13 +72,13 @@
     bottom: -5px;
     background: #fff;
 }
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit .yui-navset .yui-nav li.selected a em {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit .yui-navset .yui-nav li.selected a em {
     padding-bottom: 7px;
     color: #076a8d;
 }
 
 
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit .yui-navset .yui-content {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit .yui-navset .yui-content {
     margin: 0;
     border: none;
     border-left: 1px solid #d2d2d2;
@@ -86,7 +86,7 @@
     padding: 0;
     background: #eaeaea;
 }
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit .yui-navset .yui-content > div {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit .yui-navset .yui-content > div {
     overflow: hidden;
     border: 1px solid #d2d2d2;
     border-radius: 5px;
@@ -94,10 +94,10 @@
     margin-left: -1px;
     padding: 17px;
 }
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit div.form-fields {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit div.form-fields {
     padding: 10px;
 }
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit div.form-field label {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit div.form-field label {
     float: none;
     display: inline-block;
     padding-right: 12px;
@@ -107,20 +107,20 @@
     color: #303030;
     line-height: 15px;
 }
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit div.form-field label .mandatory-indicator {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit div.form-field label .mandatory-indicator {
     position: absolute;
     margin-left: 3px;
     color: #f00;
 }
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit div.form-field input[type="text"],
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit div.form-field select {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit div.form-field input[type="text"],
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit div.form-field select {
     float: none;
     display: inline-block;
 }
 
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit  {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit  {
 
 }
-.yui-skin-lecmTheme .yui-panel.contractor-form-edit  {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit.contractor-form-edit  {
 
 }
