ALF-1510 : Поля на форме "Выполнение действия "Сменить контролера"" выровнить по левому краю.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3954 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/daterange.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/daterange.css
@@ -19,6 +19,7 @@
 }
 
 .yui-skin-lecmTheme .yui-panel .lecm-daterange-control .datarange-end-date div.form-field label,
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit .lecm-daterange-control .datarange-end-date div.form-field label,
 .yui-skin-lecmTheme div.metadata-form div.lecm-daterange-control div.datarange-end-date div.form-field span.viewmode-label,
 .yui-skin-lecmTheme div.metadata-form div.lecm-daterange-control div.datarange-unlimited div.form-field span.viewmode-label {
 	width: auto;
