--- a/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-filter.css
+++ b/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-filter.css
@@ -1,9 +1,16 @@
-.errands-filter > div {
-    margin: 5px;
-}
 .errands-filter {
+    margin-bottom: -8px;
+    border: 1px solid #ccc;
+    border-radius: 5px 5px 0 0;
+    background: #dcdcdc;
     overflow: hidden;
-    padding-bottom: 5px;
+}
+.errands-filter > div {
+    float: left;
+    margin: 5px 0 5px 10px;
+}
+.errands-filter > span.yui-button {
+    margin-top: 5px;
 }
 .errands-filter > div > label,
 .errands-filter > div > span {
@@ -11,12 +18,28 @@
 }
 .errands-filter > div > label,
 .errands-filter > div > span:not(.yui-button) {
-    padding-top: 5px;
+    padding-top: 6px;
 }
 .errands-filter > div > span,
 .errands-filter > div > span.yui-button {
-    margin-right: 15px;
+    margin-right: 20px;
+}
+.yui-skin-lecmTheme .errands-filter div.flat-button span.yui-button {
+    background: url("/share/res/themes/lecmTheme/images/sprite.png") repeat-x scroll 0 0 transparent;
+    border-color: #999;
+}
+.yui-skin-lecmTheme .errands-filter div.flat-button span.yui-button span.first-child {
+    border-color: #999;
+}
+.yui-skin-lecmTheme .errands-filter div.flat-button span.yui-button button,
+.yui-skin-lecmTheme .errands-filter div.flat-button span.yui-button a {
+    color: #333333;
+    text-decoration: none;
+}
+.yui-skin-lecmTheme .errands-filter div.flat-button span.yui-button button {
+    width: 150px;
+    text-align: left;
 }
 .errands-filter > div > span input[type=checkbox] {
-    vertical-align: text-top;
+    /*vertical-align: text-top;*/
 }
