--- a/lecm-documents/share/src/main/webapp/css/components/document-metadata-form-edit.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-metadata-form-edit.css
@@ -19,6 +19,12 @@
     max-width: 200px;
     padding-left: 0;
 }
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit div.form-field div.viewmode-field.richtext span.viewmode-value {
+    max-width: 670px;
+    max-height: 100px;
+    overflow-y: auto;
+    word-wrap: break-word;
+}
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit div.form-field div.viewmode-field span.viewmode-value .association-auto-complete-selected-item,
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit div.form-field div.viewmode-field span.viewmode-value .association-auto-complete-selected-item-even {
     overflow: hidden;
