--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2568,3 +2568,11 @@ span.person a div.description:empty {
 .refresh-sent-document {
    background-image: url(/share/res/themes/lecmTheme/images/refresh.png);
 }
+
+.yui-skin-lecmTheme div.grid td.nowrap,
+.yui-skin-lecmTheme div.grid td.nowrap div {
+    max-width: 140px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
