[ALF-1521] Отчет по Поручениям "Исполнительская дисциплина по инициаторам" поправлено название столбца "Исполнитель-сотрудник" на "Инициатор".
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4039 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/repo/src/main/config/reportdefinitions/deploy/jasper/exec-discipline-by-creator/exec-discipline-by-creator.jrxml
+++ b/lecm-errands/repo/src/main/config/reportdefinitions/deploy/jasper/exec-discipline-by-creator/exec-discipline-by-creator.jrxml
@@ -127,7 +127,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle" rotation="Left">
 					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Исполнитель-сотрудник"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Инициатор"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement uuid="fddcd90a-ed79-4a6c-9cb4-01504c915527" isPrintRepeatedValues="false" x="145" y="2" width="110" height="164"/>
